# spieon

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260427_0001_initial.py  20260429_0002_bounty_columns.py  20260429_0003_operator_feedback.py
backend/app/: config.py  db.py  lifespan.py  main.py
backend/app/agent/: llm.py  planner.py  prompts.py  reflector.py
backend/app/api/: agent.py  erc8004.py  findings.py  health.py  keeperhub.py  memory.py  modules.py  payouts.py  scans.py  schemas.py  ws.py
backend/app/chain/: __init__.py  client.py  contracts.py  eas.py  encrypt.py  ens.py
backend/app/cost/: __init__.py  meter.py  receipts.py
backend/app/keeperhub/: __init__.py  client.py  workflows.py
backend/app/memory/: __init__.py  consolidate.py  procedural.py  recall.py  store.py
backend/app/models/: __init__.py  base.py  feedback.py  finding.py  heuristic.py  memory.py  module.py  narration.py  probe_run.py  scan.py
backend/app/observability/: __init__.py  langfuse.py
backend/app/patches/: __init__.py  colang.py  generic.py  policylayer.py  registry.py
backend/app/probes/: __init__.py  dedup.py  judge.py  normalize.py  protocol.py  registry.py  runner.py  severity.py
backend/app/realtime/: __init__.py  broker.py
backend/app/safety/: __init__.py  harness.py
backend/scripts/: ens_setup.py  seed_demo.py  sponsor_smoketest.py
backend/tests/: conftest.py  test_auto_run.py  test_chain_contracts.py  test_cost_meter.py  test_eas.py  test_encrypt.py  test_erc8004.py  test_health.py  test_patches.py  test_payouts.py  test_probe_dedup_severity.py  test_probe_payment_retry_bypass.py  test_probe_runner.py  test_probe_x402_replay.py  test_probes_registry.py  test_safety_harness.py  test_storage.py  test_workflow_end_to_end.py  test_ws_narration.py  test_x402_client.py
(+65 files in other folders)
