[project]
name = "spieon-backend"
version = "0.0.0"
description = "Spieon backend — FastAPI + LangGraph + LangMem + pgvector"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    # Config & schemas
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # ORM / DB
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pgvector>=0.3",
    # Agent runtime
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langmem>=0.0.10",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "anthropic>=0.40",
    # Observability
    "langfuse>=2.55",
    "structlog>=24.4",
    # Sandboxing
    "e2b-code-interpreter>=1.0",
    # Chain
    "web3>=7.5",
    "eth-account>=0.13",
    # Crypto / encryption (age, X25519)
    "pyrage>=1.2",
    # HTTP / utility
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "greenlet>=3.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "anyio>=4.6",
    "respx>=0.23.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
